# W-TRP

./: CMakeLists.txt  WeightTRP  an.sh  comb.py  combined_results (4).csv  do.sh  generator_from_tabela1_hardcoded.py  generator_txt_hardcoded.py  log.txt  merge.py  original  original.cpp  our.cpp  plot.py  plotCost.py  plotCostDiffer.py  plotTime2.py  plotTime3.py
build-linux/: CMakeCache.txt
results/: .~lock.combined_results.csv#  .~lock.combined_results_grouped.csv#  combined_results.csv  combined_results_grouped.csv  resultLP_MCF.csv  resultsCrama's LP.csv  resultsHiGHS_MCF.csv  resultsLP.csv  resultsLSG.csv  resultsLSG2.csv  resultsMecler.csv  resultsPF.csv  resultsPrivault-Finke.csv  results_for_original.csv  results_for_our.csv
src/: BuilderLC.cpp  BuilderLC.h  BuilderLSG.cpp  BuilderLSG.h  BuilderPF.cpp  BuilderPF.h  DAG.cpp  DAG.h  DAG_Solver.cpp  DAG_Solver.h  GeneticSolver.cpp  GeneticSolver.h  HighsFlowSolver.cpp  HighsFlowSolver.h  HighsLPSolver.cpp  HighsLPSolver.h  HighsMCFSolver.cpp  HighsMCFSolver.h  IBuildGraph.h  ISolver.h  Instance.cpp  Instance.h  KTNSSolver.cpp  KTNSSolver.h  WeightTRP  main.cpp
tests_generators/: SAOR_generator.py  generator_from_tabela.py  generator_from_tabela — копия.py  rand.py  ssp_generate.py  tux.py
tests_txt/: from_1datA10_M10_N10_C5.txt  from_1datA1_M10_N10_C5.txt  from_1datA2_M10_N10_C5.txt  from_1datA3_M10_N10_C5.txt  from_1datA4_M10_N10_C5.txt  from_1datA5_M10_N10_C5.txt  from_1datA6_M10_N10_C5.txt  from_1datA7_M10_N10_C5.txt  from_1datA8_M10_N10_C5.txt  from_1datA9_M10_N10_C5.txt  from_1datB10_M20_N15_C8.txt  (+796 more)
(+537 files in other folders)
